# bella-ai-chatbot

./: .gitignore  pyproject.toml  requirements.txt
chat_model/: HUGGINGFACE.py  chat.py  chatbot.py  uichatbot.py
chat_model/recap/: core.py  core_systematic_output.py  core_systematic_output_ui.py  uicore.py
embeddings_model/: embeddings.py
